// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`neexistující modifikace 1`] = `
Object {
  "code": "neexistuje",
  "status": "Neexistující modifikace ubytování 'huh'.",
}
`;

exports[`not authenticated 1`] = `
Object {
  "code": "authentication token invalid",
  "status": "Špatný ověřovací token. Zkus se přihlásit znovu. Detaily: JsonWebTokenError: jwt must be provided",
}
`;

exports[`odhlaš a přihlaš ubytování 1`] = `
Object {
  "code": "ok",
  "status": "uloženo v pořádku",
}
`;

exports[`odhlaš a přihlaš ubytování 2`] = `
Object {
  "code": "ok",
  "status": "uloženo v pořádku",
}
`;

exports[`odhlaš a přihlaš ubytování 3`] = `
Array [
  Object {
    "__v": 0,
    "ucasti": Array [
      Object {
        "prihlaska": Object {
          "datum": 2018-06-20T00:00:00.000Z,
          "kategorie": "===id===",
        },
        "rok": 2018,
        "ubytovani": Object {
          "pátek": Object {
            "prihlaseno": true,
          },
        },
        "udaje": Object {
          "jmeno": "Františka",
          "narozeni": Object {
            "rok": 1953,
          },
          "obec": "Ostrava 1",
          "pohlavi": "žena",
          "prijmeni": "Sukdoláková",
          "stat": "Česká republika",
        },
      },
    ],
  },
]
`;

exports[`přihlaš ubytování (nebyla nikdy přihlášena) 1`] = `
Object {
  "code": "ok",
  "status": "uloženo v pořádku",
}
`;

exports[`přihlaš ubytování (nebyla nikdy přihlášena) 2`] = `
Array [
  Object {
    "__v": 0,
    "ucasti": Array [
      Object {
        "prihlaska": Object {
          "datum": 2018-06-20T00:00:00.000Z,
          "kategorie": "===id===",
        },
        "rok": 2018,
        "ubytovani": Object {
          "pátek": Object {
            "prihlaseno": true,
          },
        },
        "udaje": Object {
          "jmeno": "Františka",
          "narozeni": Object {
            "rok": 1953,
          },
          "obec": "Ostrava 1",
          "pohlavi": "žena",
          "prijmeni": "Sukdoláková",
          "stat": "Česká republika",
        },
      },
    ],
  },
]
`;

exports[`ubytování nevypsáno 1`] = `
Object {
  "code": "neexistuje",
  "status": "Nelze se přihlásit na ubytování v sobotu. Není vypsáno.",
}
`;

exports[`ubytování přihlásila a nepřespala 1`] = `
Object {
  "code": "ok",
  "status": "uloženo v pořádku",
}
`;

exports[`ubytování přihlásila a nepřespala 2`] = `
Array [
  Object {
    "__v": 0,
    "ucasti": Array [
      Object {
        "prihlaska": Object {
          "datum": 2018-06-20T00:00:00.000Z,
          "kategorie": "===id===",
        },
        "rok": 2018,
        "ubytovani": Object {
          "pátek": Object {
            "prespano": false,
            "prihlaseno": true,
          },
        },
        "udaje": Object {
          "jmeno": "Františka",
          "narozeni": Object {
            "rok": 1953,
          },
          "obec": "Ostrava 1",
          "pohlavi": "žena",
          "prijmeni": "Sukdoláková",
          "stat": "Česká republika",
        },
      },
    ],
  },
]
`;

exports[`ubytování přihlásila a přespala 1`] = `
Object {
  "code": "ok",
  "status": "uloženo v pořádku",
}
`;

exports[`ubytování přihlásila a přespala 2`] = `
Array [
  Object {
    "__v": 0,
    "ucasti": Array [
      Object {
        "prihlaska": Object {
          "datum": 2018-06-20T00:00:00.000Z,
          "kategorie": "===id===",
        },
        "rok": 2018,
        "ubytovani": Object {
          "pátek": Object {
            "prespano": true,
            "prihlaseno": true,
          },
        },
        "udaje": Object {
          "jmeno": "Františka",
          "narozeni": Object {
            "rok": 1953,
          },
          "obec": "Ostrava 1",
          "pohlavi": "žena",
          "prijmeni": "Sukdoláková",
          "stat": "Česká republika",
        },
      },
    ],
  },
]
`;

exports[`účastník neexistuje 1`] = `
Object {
  "code": "neexistuje",
  "status": "Účastník s id 41224d776a326fb40f000001 neexistuje.",
}
`;
